<resources>

    <string name="r_le"><u>\nRôle:</u></string>
    <string name="divinite">divinite</string>
    <string name="role">role</string>
    <string name="affiliation_s"><u>Affiliation(s):</u></string>
    <string name="affiliation">affiliation</string>
    <string name="symbole"><u>Symbole</u>:</string>
    <string name="symbol">symbole</string>
    <string name="attribut_s"><u>Attribut(s)</u>:</string>
    <string name="attributs">attributs</string>
    <string name="element">element</string>
    <string name="element_s"><u>Element(s)</u>:</string>
    <string name="animal"><u>Animal</u></string>
    <string name="name">name</string>
    <string name="signification">signification</string>
    <string name="search">Search</string>
</resources>
