<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/egyptback">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/signification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signification"
            android:gravity="center"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/divinite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/divinite"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="italic" />

        <ImageView
            android:id="@+id/url"
            android:layout_width="match_parent"
            android:layout_height="133dp"
            app:srcCompat="@mipmap/ic_launcher"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/r_le"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/role"
            android:gravity="center"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center"
            android:text="@string/affiliation_s"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/affiliation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/affiliation"
            android:gravity="center"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/symbole"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/symbimage"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            app:srcCompat="@mipmap/ic_launcher"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/symbole"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/symbol"
            android:gravity="center"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:gravity="center"
            android:text="@string/attribut_s"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/attributs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/attributs"
            android:gravity="center"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:text="@string/element_s"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/element"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:text="@string/element"
            android:gravity="center"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView37"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:text="@string/animal"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/animal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/animal"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp"
            android:textStyle="italic" />

    </LinearLayout>
</ScrollView>